...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/compact_menu_frame"
        android:paddingHorizontal="@dimen/margin_and_padding_default"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <!-- TEXT MENU -->
        <LinearLayout
...
    <com.gerardbradshaw.library.util.ColorSlider
        android:id="@+id/compact_color_slider"
        style="@style/ColorSliderInLinearLayoutStyle" />

    <!-- PREVIEW -->
    <ImageView
        android:id="@+id/compact_preview"
        style="@style/PreviewStyle" />
</LinearLayout>
