<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MyExampleLayoutStyle">

    <TextView
        android:id="@+id/ex_compact_listener"
        style="@style/ColorChangeListenerStyle"/>

    <com.gerardbradshaw.library.views.CompactColorPickerView
        android:id="@+id/ex_compact_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:enablePreview="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menuType="image" />

</LinearLayout>