<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/slider_gradient_bar"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_and_padding_default"
        android:layout_marginRight="@dimen/margin_and_padding_default" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_and_padding_default"
        android:layout_marginRight="@dimen/margin_and_padding_default"
        android:background="@drawable/border_black" />

    <SeekBar
        android:id="@+id/slider_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:max="@integer/spectrum_color_count"
        android:paddingStart="@dimen/margin_and_padding_default"
        android:paddingEnd="@dimen/margin_and_padding_default"
        android:progressDrawable="@android:color/transparent"
        android:thumb="@drawable/thumb_rounded_corner_rectangle" />

</FrameLayout>